--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,8 @@
 {
   "tabWidth": 2,
   "semi": false,
-  "singleQuote": false
+  "singleQuote": false,
+  "importOrder": ["^@core/(.*)$", "^@server/(.*)$", "^@ui/(.*)$", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
