--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@refinedev/react-table": "^5.6.6",
     "@refinedev/simple-rest": "^5.0.1",
     "@tanstack/react-table": "^8.2.6",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.411.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.14.11",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
