--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.19",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.411.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.52.1",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.8.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
