--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@refinedev/cli": "^2.16.21",
     "@refinedev/core": "^4.47.1",
